# gpt-django

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  dev-requirements.txt  docker-compose.prod.yml  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  cron.yml
backend/: mypy.ini
backend/a12n/: urls.py  utils.py
backend/a12n/api/: throttling.py  views.py
backend/a12n/tests/jwt_views/: test_refresh_jwt_token.py
backend/app/: .env.ci  asgi.py  exceptions.py  factory.py  models.py  services.py  settings.py  wsgi.py
backend/app/admin/: __init__.py
backend/app/api/: viewsets.py
backend/app/conf/: all_auth.py  auth.py  cors.py  http.py  installed_apps.py  social_auth.py  templates.py
backend/app/fixtures/: api.py  factory.py
backend/app/templates/: 404.html  about.html  header.html
backend/app/testing/: api.py  factory.py
backend/app/tests/: test_remote_addr_midlleware.py
backend/app/tests/testing/factory/: test_factory.py  test_registry.py
backend/app/urls/: v1.py
backend/gpt/: admin.py  apps.py  definitions.py  factory.py  models.py  urls.py
backend/gpt/api/: throttle.py  views.py
backend/gpt/api/v1/: urls.py
backend/gpt/api/v1/filtersets/: reply_filterset.py
backend/gpt/api/v1/serializers/: __init__.py  chat_serializer.py  reply_serializer.py
backend/gpt/api/v1/viewsets/: openai_apiview.py  reply_counter_apiview.py  reply_viewset.py
backend/gpt/migrations/: 0001_add_Reply.py  0002_add_OpenAiProfile.py  0003_unique_token.py
backend/gpt/services/: message_actor_base.py  message_displayer.py
backend/gpt/services/openai/: __init__.py  openai_chatter.py  openai_token_getter.py  openai_usages_counter.py
backend/gpt/services/v1/: chat_completer.py
backend/gpt/templates/assistant/: home.html
backend/gpt/tests/api/v1/: test_chat.py
backend/gpt/tests/api/v1/replies/: test_count.py  test_filter.py  test_permissions.py  test_set_archived_status.py
backend/gpt/tests/models/: test_openai_get_usages_count.py
backend/gpt/tests/services/: conftest.py  test_message_actor_base.py
backend/gpt/tests/services/openai/: test_openai_chatter.py  test_openai_token_getter.py  test_openai_usages_counter.py
backend/gpt/tests/services/v1/: conftest.py  test_chat_completer.py
backend/social_auth/: apps.py  urls.py
backend/social_auth/api/: serializers.py  viewsets.py
backend/users/: factory.py  models.py  urls.py
backend/users/api/: viewsets.py
frontend/: Dockerfile  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  vite.config.js
frontend/src/: app.html  hooks.server.js
frontend/src/components/: AboutBlock.svelte  Navbar.svelte  NewMessage.svelte  Reply.svelte  UsageCount.svelte
frontend/src/lib/: auth.js  client.js
frontend/src/routes/: +layout.server.js  +layout.svelte  +page.svelte
frontend/src/routes/about/: +page.svelte
frontend/src/routes/accounts/: +page.svelte
frontend/src/routes/auth/: +page.svelte
frontend/src/routes/callback/: +page.server.js  +page.svelte
frontend/src/routes/login/: +server.js
frontend/src/utils/: client.js  lineBreaker.js  messagesStore.js  tokenStore.js
src/: conftest.py  mypy.ini
src/app/: .env.ci  exceptions.py  services.py  settings.py
src/app/api/: viewsets.py
src/app/conf/: api.py  http.py  installed_apps.py  openai.py
src/app/templates/: 404.html  about.html  base.html  footer.html  header.html
src/app/templates/account/: login.html
src/app/urls/: __init__.py  v1.py
src/gpt/: admin.py  factory.py  fixtures.py  models.py  urls.py
src/gpt/api/: views.py
src/gpt/api/v1/: urls.py
src/gpt/api/v1/filtersets/: __init__.py  reply_filterset.py
src/gpt/api/v1/serializers/: __init__.py  reply_serializer.py
src/gpt/api/v1/viewsets/: __init__.py  openai_apiview.py  reply_counter_apiview.py  reply_viewset.py
src/gpt/migrations/: 0001_add_author_to_Reply_and_o2o_for_previous.py  0002_change_ordering.py  0003_unique_token.py  0003_uuid_as_pk.py  0004_replies_plural.py
src/gpt/services/: __init__.py  message_actor_base.py  message_creator.py  message_displayer.py  openai_token_getter.py  openai_usages_counter.py
src/gpt/services/openai/: openai_chatter.py  openai_usages_counter.py
src/gpt/services/v1/: __init__.py  openai_chat_completer.py
src/gpt/templates/assistant/: 404.html  base.html  home.html  questions_and_answers.html  reply_detail.html  reply_list.html
src/gpt/tests/: conftest.py
src/gpt/tests/api/v1/: test_openai_chat.py
src/gpt/tests/api/v1/replies/: conftest.py  test_count.py  test_filter.py  test_list.py  test_permissions.py  test_read.py  test_set_archived_status.py
src/gpt/tests/services/: test_message_actor_base.py  test_message_creator.py  test_message_displayer.py  test_openai_token_getter.py  test_openai_usages_counter.py
src/gpt/tests/services/openai/: test_openai_chatter.py
src/gpt/tests/services/v1/: conftest.py  test_chat_completer.py  test_openai_chat_completer.py
